# retour-utils

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
examples/: lua_detour.rs  lua_detour_impl.rs  messageboxw_detour.rs
impl/src/: expand.rs  fold.rs  helpers.rs  lib.rs  parse.rs
impl/src/fold/: detour.rs  ptr.rs
macro/: Cargo.toml
macro/src/: attr.rs  codegen.rs  collect.rs  lib.rs  model.rs
macro/src/attr/: hook.rs  keywords.rs  ptr.rs  target.rs
macro/src/codegen/: chain.rs  detour.rs  impl_block.rs  init.rs  module.rs  ptr.rs  signature.rs
macro/src/collect/: common.rs  impl_block.rs  module.rs
macro/src/model/: context.rs  detour.rs  paths.rs  ptr.rs
runtime/: Cargo.toml
runtime/src/: error.rs  lib.rs  lookup.rs
runtime/tests/: chain_order.rs  chain_order_module.rs  progress.rs  ptr_rw.rs
runtime/tests/build-tests/: hook_impl_basic.rs  hook_impl_chain.rs  hook_impl_no_dll.rs  hook_impl_offset.rs  maintain_vis.rs  ptr_impl.rs  ptr_module.rs
src/: lib.rs
tests/: chain_order_module.rs  progress.rs
tests/build-tests/: different_abis.rs  hook_impl_basic.rs  hook_impl_chain.rs  hook_impl_offset.rs  hook_impl_self.rs  ptr_impl.rs
