[workspace]
members = ["macro", "runtime"]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "BSD-2-Clause"
authors = ["Mason Ginter <mason@dagint.com>"]
documentation = "https://docs.rs/retour-utils"
homepage = "https://github.com/Hpmason/retour-utils"
repository = "https://github.com/Hpmason/retour-utils"
keywords = ["detour", "hook", "function", "redirect", "macros"]
readme = "README.md"
